# xpilot

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Info.plist  README.md  conanfile.txt  info.plist  interprocess.cpp  interprocess.h  main.cpp  main.qml  qml.qrc  vatsimauth.lib  vatsimauth.lib.release  xpilot.desktop  xpilot.icns  xpilot.json  xpilot.rc
client/: CMakeLists.txt  Info.plist  conanfile.txt  entitlements.plist  qml.qrc  xpilot.desktop  xpilot.rc.in
client/Resources/Components/: ConfigRequiredDialog.qml  DisconnectDialog.qml  ErrorDialog.qml  InvalidTypeCodeDialog.qml  MicrophoneCalibrationRequired.qml  NearbyAtc.qml  NearbyAtcGroup.qml  RadioStack.qml  Toolbar.qml
client/Resources/Components/DownloadCSLModels/: DownloadModels.qml  ExtractModels.qml  SetXplanePath.qml
client/Resources/Components/VersionCheck/: DownloadingUpdate.qml  NewVersionAvailable.qml
client/Resources/Controls/: BlueButton.qml  CustomBorder.qml  CustomCheckBox.qml  CustomComboBox.qml  CustomSwitch.qml  CustomTextArea.qml  CustomTextField.qml  GrayButton.qml  PeakLevelControl.qml  RadioStackIndicator.qml  StandardButton.qml  TabControl.qml  ToolbarButton.qml  TransparentButton.qml  TransponderButton.qml  VerticalTabBar.qml  VerticalTabButton.qml  VolumeSlider.qml  WindowLayoutSave.qml
client/Resources/InstallModels/: DownloadModels.qml  ExtractModels.qml  SetXplanePath.qml
client/Resources/Scripts/: FrequencyUtils.js  StringUtils.js  TimestampUtils.js
client/Resources/Ui/: Colors.js
client/Resources/Views/: ConnectWindow.qml  FlightPlanWindow.qml  ImportIcaoFpl.qml  MainWindow.qml  SettingsWindow.qml
client/Resources/Views/Settings/: SettingsAudio.qml  SettingsMiscellaneous.qml  SettingsNetwork.qml  SettingsNotifications.qml
client/src/: appcore.cpp  appcore.h  main.cpp
client/src/aircrafts/: aircraft_configuration.cpp  aircraft_configuration.h  aircraft_visual_state.h  network_aircraft.h  network_aircraft_manager.cpp  network_aircraft_manager.h  radio_stack_state.h  user_aircraft_config_data.h  user_aircraft_data.h  user_aircraft_manager.cpp  user_aircraft_manager.h  velocity_vector.h
client/src/audio/: afv.cpp  afv.h  audiodeviceinfo.h  notification_sound_engine.cpp  notification_sound_engine.h
client/src/common/: build_config.cpp.in  build_config.h  build_config.inc  clipboardadapter.h  enums.h  frequency_utils.h  installmodels.cpp  installmodels.h  libzippp.cpp  libzippp.h  notificationtype.h  qserializer.h  runguard.cpp  runguard.h  simplecrypt.cpp  typecodedatabase.cpp  typecodedatabase.h  utils.h  versioncheck.cpp  versioncheck.h
client/src/config/: appconfig.cpp  appconfig.h  flightplan.h  windowconfig.h
client/src/controllers/: controller.h  controller_manager.cpp  controller_manager.h
client/src/fsd/: client_properties.h  enums.h  fsd_client.cpp  fsd_client.h  serializer.cpp  serializer.h
client/src/fsd/pdu/: pdu_add_atc.cpp  pdu_add_atc.h  pdu_add_pilot.cpp  pdu_add_pilot.h  pdu_atc_position.cpp  pdu_atc_position.h  pdu_auth_challenge.cpp  pdu_auth_challenge.h  pdu_auth_response.cpp  pdu_auth_response.h  pdu_base.cpp  pdu_base.h  pdu_broadcast_message.cpp  pdu_broadcast_message.h  pdu_change_server.cpp  pdu_change_server.h  pdu_client_identification.cpp  pdu_client_identification.h  pdu_client_query.cpp  pdu_client_query.h  pdu_client_query_response.cpp  pdu_client_query_response.h  pdu_delete_atc.cpp  pdu_delete_atc.h  pdu_delete_pilot.cpp  pdu_delete_pilot.h  pdu_fast_pilot_position.cpp  pdu_fast_pilot_position.h  pdu_flight_plan.cpp  pdu_flight_plan.h  pdu_format_exception.h  pdu_kill_request.cpp  pdu_kill_request.h  pdu_metar_request.cpp  pdu_metar_request.h  pdu_metar_response.cpp  pdu_metar_response.h  pdu_mute.cpp  pdu_mute.h  pdu_pilot_position.cpp  (+21 more)
client/src/network/: connectinfo.h  nearbyatc.h  networkmanager.cpp  networkmanager.h  networkserverlist.cpp  networkserverlist.h  serverlistmanager.cpp  serverlistmanager.h  vatsim_auth.h
client/src/network/events/: radio_message_received.h
client/src/qinjection/: dependencycreator.cpp  dependencycreator.h  dependencyinjector.cpp  dependencyinjector.h  dependencypointer.cpp  dependencypointer.h  dependencypool.cpp  dependencypool.h
client/src/simulator/: dto.h  xplane_adapter.cpp  xplane_adapter.h
client/xPilot.AppDir/: AppRun  xPilot.desktop
dependencies/: .gitmodules  LICENSE_curl.txt  LICENSE_libevent.txt  LICENSE_libzip.txt  LICENSE_nng.txt  LICENSE_speexdsp.txt  README.md
dependencies/vatsim-auth/: CMakeLists.txt
dependencies/vatsim-auth/src/: vatsimauth.cpp
installer/: linux.xml  macos.xml  procect-velocity.xml  project.xml  (+1 more)
plugin/: CMakeLists.txt  conanfile.txt
plugin/Resources/: Doc8643.txt  Obj8Datarefs.txt  related.txt
plugin/Resources/CSL/: PlaceCSLPackagesHere.html
plugin/include/: AircraftManager.h  AircraftSoundManager.h  AudioEngine.h  Config.h  Constants.h.in  DataRefAccess.h  Dto.h  FrameRateMonitor.h  GeoCalc.hpp  InterpolatedState.h  NearbyATCWindow.h  NetworkAircraft.h  NetworkAircraftConfig.h  NotificationPanel.h  OwnedDataRef.h  Plugin.h  SettingsWindow.h  Stopwatch.h  TerrainProbe.h  TextMessageConsole.h  Utilities.h  WorldPoint.h  XPilot.h  XPilotAPI.h  XplaneCommand.h  abacus.hpp  aircraft_manager.h  config.h  constants.h.in  data_ref_access.h  dto.h  frame_rate_monitor.h  geo_calc.hpp  nearby_atc_window.h  network_aircraft.h  notification_panel.h  owned_data_ref.h  plugin.h  settings_window.h  stdafx.h  (+7 more)
plugin/src/: AircraftManager.cpp  AircraftSoundManager.cpp  AudioEngine.cpp  Config.cpp  DataRefAccess.cpp  FrameRateMonitor.cpp  NearbyATCWindow.cpp  NetworkAircraft.cpp  NetworkAircraftConfig.cpp  NotificationPanel.cpp  OwnedDataRef.cpp  Plugin.cpp  SettingsWindow.cpp  Stopwatch.cpp  TerrainProbe.cpp  TextMessageConsole.cpp  XPilot.cpp  Xpilot.sym  Xpilot.sym_mac  aircraft_manager.cpp  config.cpp  data_ref_access.cpp  frame_rate_monitor.cpp  nearby_atc_window.cpp  network_aircraft.cpp  notification_panel.cpp  owned_data_ref.cpp  plugin.cpp  settings_window.cpp  stopwatch.cpp  terrain_probe.cpp  text_message_console.cpp  xpilot.cpp
(+302 files in other folders)
